--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <!-- SplashScreen Texts-->
+    <string name="splash_text">Either write something worth reading or do something worth writing</string>
 </resources>
